--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "react-router-dom": "^6.2.1",
     "webpack-dev-server": "^3.11.2"
   }
